--- a/DEA.ipynb
+++ b/DEA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTRLGFKH6mgu+Y+U+GhoeM",
+      "authorship_tag": "ABX9TyNmQS6MKKxjsi3iIxmtGg0j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1130,7 +1130,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#To get the percentage of null values in each colum\n",
+        "#To get the percentage of null values in each column\n",
         "data.isnull().sum()/(len(data))*100"
       ],
       "metadata": {
@@ -1210,7 +1210,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#If we want to know the Rows and colums\n",
+        "#If we want to know the Rows and columns\n",
         "data.shape"
       ],
       "metadata": {
@@ -1246,7 +1246,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Removing the Pulse colum\n",
+        "#Removing the Pulse column\n",
         "#data = data.drop(['Pulse'], axis=1)\n"
       ],
       "metadata": {
@@ -2980,8 +2980,8 @@
       "source": [
         "data ['Calories']=data['Calories'].fillna(data['Calories'].mean())\n",
         "print(\"Mean of Maxpulse is:\", data['Maxpulse'].mean())\n",
-        "print(\"Mean of Maxpulse is:\", data['Maxpulse'].median())\n",
-        "print(\"Mean of Maxpulse is:\", data['Maxpulse'].mode()[0])\n",
+        "print(\"Median of Maxpulse is:\", data['Maxpulse'].median())\n",
+        "print(\"Mode of Maxpulse is:\", data['Maxpulse'].mode()[0])\n",
         "#10,20,20,5,5\n",
         "\n",
         "#Mean , Median, Mode of Calories:\n",
@@ -2992,17 +2992,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "crteWPis-5Fz",
-        "outputId": "a7c696ba-b855-4071-a777-588a45fcd621"
+        "outputId": "05e5bfe6-2890-479d-c162-03fb06640e5e"
       },
-      "execution_count": 20,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mean of Maxpulse is: 128.5\n",
-            "Mean of Maxpulse is: 127.5\n",
-            "Mean of Maxpulse is: 120\n"
+            "Mean of Maxpulse is: 128.93333333333334\n",
+            "Median of Maxpulse is: 127.5\n",
+            "Mode of Maxpulse is: 120\n"
           ]
         }
       ]
@@ -3032,15 +3032,6 @@
           "execution_count": 21
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "e3STOKVjEppB"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
