--- a/DEA113.ipynb
+++ b/DEA113.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiaRUxvjwxhJjqdUbl9CsW",
+      "authorship_tag": "ABX9TyNT6ttSMlaj6QFJzta5YykR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,9 @@
           "height": 206
         },
         "id": "vXKXAAcKiSXi",
-        "outputId": "4cc597e4-65c0-4529-dc94-da0f8810a9e3"
+        "outputId": "0133b524-592d-4a7e-cb8b-9530f9d78769"
       },
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -58,7 +58,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-aaa0a9d5-fe64-4649-bcff-360fbb98e062\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e9e8bd4d-d231-4017-bc0d-8a4795e33105\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -131,7 +131,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aaa0a9d5-fe64-4649-bcff-360fbb98e062')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e9e8bd4d-d231-4017-bc0d-8a4795e33105')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -183,12 +183,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-aaa0a9d5-fe64-4649-bcff-360fbb98e062 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e9e8bd4d-d231-4017-bc0d-8a4795e33105 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-aaa0a9d5-fe64-4649-bcff-360fbb98e062');\n",
+              "        const element = document.querySelector('#df-e9e8bd4d-d231-4017-bc0d-8a4795e33105');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -208,8 +208,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1f946dd7-6321-4ce9-bb5a-2af6ba6cbb18\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1f946dd7-6321-4ce9-bb5a-2af6ba6cbb18')\"\n",
+              "<div id=\"df-4cc40b9f-f170-450c-8fcd-7ed71e2b8f84\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4cc40b9f-f170-450c-8fcd-7ed71e2b8f84')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -328,7 +328,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1f946dd7-6321-4ce9-bb5a-2af6ba6cbb18 button');\n",
+              "        document.querySelector('#df-4cc40b9f-f170-450c-8fcd-7ed71e2b8f84 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -345,7 +345,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 2
         }
       ]
     },
@@ -681,7 +681,7 @@
         "id": "aC97BG_2rkrK",
         "outputId": "0850941f-c2a9-4f1e-b2e6-3dfe660c3d2e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +716,7 @@
         "id": "leOq7XZfr0B6",
         "outputId": "934c01a5-7ec2-4e18-c257-fe9e92e516f0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1061,7 +1061,7 @@
         "id": "G4nlwLQ3truM",
         "outputId": "12565402-9115-4b98-b504-2c0f3a1ef619"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1141,7 +1141,7 @@
         "id": "5Jkazgg0ucph",
         "outputId": "0df928ad-c493-45bf-ba6f-bac018df074d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1220,7 +1220,7 @@
         "id": "aVl-2mveuwI6",
         "outputId": "2824e92e-a389-44e1-b0c5-b197c4c2bdf0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1253,7 +1253,7 @@
         "collapsed": true,
         "id": "34r2QFlSvMdr"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1269,7 +1269,7 @@
         "id": "67DO_wdGxNiR",
         "outputId": "ff3be135-533a-4004-dd22-bd7507c5e78a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1581,7 +1581,7 @@
         "id": "NLreYMHzxhkt",
         "outputId": "d77b7943-a65d-431f-a8da-1ab17a68de45"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1632,7 +1632,7 @@
         "id": "RjbzFQHk15sq",
         "outputId": "38c889fa-6624-46f4-d86c-4271d9cf9298"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1661,7 +1661,7 @@
         "id": "7PCD7pbu3WCe",
         "outputId": "2fc8d097-0667-4a0d-b55b-cc3113c395d4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,7 +1688,7 @@
         "id": "Wans96IN5sYl",
         "outputId": "075a1098-6b1e-4418-f73b-1800521ce85e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2027,7 +2027,7 @@
         "id": "Xu92oFyF9W6R",
         "outputId": "cdf8028d-ec93-4e54-a40c-1d592afd4305"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2497,7 +2497,7 @@
       "metadata": {
         "id": "Jhyt_f3k-LLD"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2513,7 +2513,7 @@
         "id": "UgMMgKAO-tvi",
         "outputId": "d8a6ab2d-866e-4a7f-aa17-d28dbe28f183"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2978,10 +2978,10 @@
     {
       "cell_type": "code",
       "source": [
-        "data ['Calories']=data['Calories'].fillna(data['Calories'].mean())\n",
+        "data['Calories']=data['Calories'].fillna(data['Calories'].mean())\n",
         "print(\"Mean of Maxpulse is:\", data['Maxpulse'].mean())\n",
-        "print(\"Mean of Maxpulse is:\", data['Maxpulse'].median())\n",
-        "print(\"Mean of Maxpulse is:\", data['Maxpulse'].mode()[0])\n",
+        "print(\"Median of Maxpulse is:\", data['Maxpulse'].median())\n",
+        "print(\"Mode of Maxpulse is:\", data['Maxpulse'].mode()[0])\n",
         "#10,20,20,5,5\n",
         "\n",
         "#Mean , Median, Mode of Calories:\n",
@@ -2992,17 +2992,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "crteWPis-5Fz",
-        "outputId": "a7c696ba-b855-4071-a777-588a45fcd621"
+        "outputId": "8dbb67ec-7e65-44c8-f5e3-8ab64e8e818b"
       },
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Mean of Maxpulse is: 128.5\n",
-            "Mean of Maxpulse is: 127.5\n",
-            "Mean of Maxpulse is: 120\n"
+            "Median of Maxpulse is: 127.5\n",
+            "Mode of Maxpulse is: 120\n"
           ]
         }
       ]
@@ -3019,7 +3019,7 @@
         "id": "l_fianQDARsm",
         "outputId": "b2dc62f1-682f-40c7-e172-66d050fb1150"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3046,7 +3046,7 @@
         "id": "FjYE8t6FAVBJ",
         "outputId": "61e36e70-d382-404b-91c0-65a522881340"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3073,7 +3073,7 @@
         "id": "FUcwZcYSA_NU",
         "outputId": "fb1dfba2-0827-4c49-dd15-c67c93504c4b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3148,7 +3148,7 @@
       "metadata": {
         "id": "4XioGLZMBHYP"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3164,7 +3164,7 @@
         "id": "c-fa8lMkBZjx",
         "outputId": "e1ff6302-dba5-4af8-f255-87580a72c69f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3242,7 +3242,7 @@
         "id": "8868BRO2Be77",
         "outputId": "6b7b6534-2b75-4183-9699-7df796ae5531"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3271,7 +3271,7 @@
         "id": "S9tJm4fLBlC3",
         "outputId": "12ce4de2-b7cf-484e-a979-dd5c1a189966"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
